# virtualizor-to-virtfusion

./: .env.example  .gitignore  README.md  pyproject.toml  vz2vf-migrate  whmcsmap.conf.example
scripts/: virtfusion_master_ipv6_helper.php
vz2vf_migrate/: cli.py  config.py  host_ops.py  inventory.py  migrator.py  models.py  reporting.py  runner.py  services.py  state.py  virtfusion.py  virtfusion_master.py  virtualizor.py  whmcs.py  whmcs_rewrite.py  xml_disks.py
